# wnutils

./: .gitignore  .readthdocs.yaml  .readthedocs.yaml  CITATION.cff  MANIFEST.in  README.rst  XSD_REVISION  build.sh  doc-requirements.txt  pyproject.toml  save  setup.py
.github/workflows/: black.yml  conftest.py  lint.yml  test.yml  wnutils_test.py
doc/: Makefile  make_doc.sh  requirements.txt
doc/source/: .gitignore  acknowledgments.rst  animate_tutorial.rst  changelog.rst  conf.py  data_tutorial.rst  documentation.rst  element_symbols.rst  index.rst  installation_tutorial.rst  modules.rst  plot_tutorial.rst  read_tutorial.rst  tutorials.rst  wnutils.plot.rst  wnutils.plot2d.rst  wnutils.read.rst  wnutils.rst  write_tutorial.rst
tests/: test_base.py  test_h5.py  test_init.py  test_plotting.py  test_schemas.py  test_xml.py
tests/data/: small_network.h5  small_network.xml
tests/integration/: run_osf_tests.py  test_tutorial_data.py
tools/: update_xsd_pub.sh
wnutils/: .gitignore  README  __about__.py  __init__.py  base.py  h5.py  multi_h5.py  multi_xml.py  params.py  utils.py  wnbase.py  xml.py
wnutils/plot/: __init__.py  h5.py  xml.py
wnutils/plot2d/: h5.py  xml.py
wnutils/read/: __init__.py  h5.py  xml.py
wnutils/xsd_pub/: README.md  W3C_LICENSE.txt  catalog  input_nuclide_z_a.xsd  libnucnet.xsd  libnucnet__net.xsd  libnucnet__nuc.xsd  libnucnet__nuc__types.xsd  libnucnet__reac.xsd  libnucnet__reac__types.xsd  zone_data.xsd  zone_data_types.xsd
