[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["wnutils"]
exclude = ["tutorial*"]

[tool.setuptools.package-data]
wnutils = ["xsd_pub/*"]

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]

[project]
name = "wnutils"
version = "4.0.0"
dependencies = ["lxml", "matplotlib", "numpy", "h5py", "scipy"]
requires-python = ">=3.9"
authors = [
  {name = "Bradley S. Meyer", email = "mbradle@g.clemson.edu"},
]
maintainers = [
  {name = "Bradley S. Meyer", email = "mbradle@g.clemson.edu"},
]
description = "Package for handling webnucleo reaction networks"
readme = "README.rst"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
keywords = ["astronomy", "nuclear astrophysics"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Documentation = "https://wnutils.readthedocs.io"
Repository = "https://github.com/mbradle/wnutils.git"
"Bug Tracker" = "https://github.com/mbradle/wnutils/issues"
